First section done. Responsive nav in progress.

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Logistic Company</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus, inventore.
+    <div id="main-wrapper">
+      <header id="header">
+        <div class="container">
+          <div class="logo">Logo</div>
+          <div class="brand">LC Solutions</div>
+          <nav class="nav">
+            <ul class="nav-item-list">
+              <li class="nav-item">Home</li>
+              <li class="nav-item">About</li>
+              <li class="nav-item">Solutions</li>
+              <li class="nav-item">Partnership</li>
+              <li class="nav-item">Contact</li>
+            </ul>
+          </nav>
+          <button class="navicon"></button>
+        </div>
+      </header>
+      <section id="section-intro">
+        <div class="container">
+          <div class="columns">
+            <div class="column-50">
+              <img
+                src="assets/images/section-intro-img-1.png"
+                alt="Warehouse intro ilustration"
+                class="intro-img img"
+              />
+            </div>
+            <div class="column-50">
+              <div class="intro-text">
+                <h1>LC Solutions</h1>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Sequi, provident maxime expedita asperiores itaque saepe
+                  officia iusto, earum maiores quisquam neque.
+                </p>
+                <p>
+                  Tempore placeat corporis veritatis, fuga nisi amet illum
+                  tenetur!
+                </p>
+                <button class="button" type="button">Check</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="section-about"></section>
+      <section id="solutions"></section>
+      <section id="partnership"></section>
+      <section id="contact"></section>
+    </div>
   </body>
 </html>
