Visual part done

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
   </head>
   <body>
     <div id="main-wrapper">
-      <header id="header">
+      <header class="header">
         <div class="container">
-          <div class="logo">Logo</div>
-          <div class="brand">LC Solutions</div>
+          <div class="logo"><a href="/">Logo</a></div>
+          <div class="brand"><a href="/">LC Solutions</a></div>
           <nav class="nav">
             <ul class="nav-item-list">
-              <li class="nav-item">Home</li>
-              <li class="nav-item">About</li>
-              <li class="nav-item">Solutions</li>
-              <li class="nav-item">Partnership</li>
-              <li class="nav-item">Contact</li>
+              <li class="nav-item"><a href="/">Home</a></li>
+              <li class="nav-item"><a href="#about">About</a></li>
+              <li class="nav-item"><a href="#solutions">Solutions</a></li>
+              <li class="nav-item"><a href="#partnership">Partnership</a></li>
+              <li class="nav-item"><a href="#contact">Contact</a></li>
             </ul>
           </nav>
           <button class="navicon"></button>
@@ -39,7 +39,10 @@
             </div>
             <div class="column-50">
               <div class="intro-text">
-                <h1>LC Solutions</h1>
+                <h1>
+                  LC Solutions
+                </h1>
+                <p class="sub-header">Logistic solutions for your demand</p>
                 <p>
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Sequi, provident maxime expedita asperiores itaque saepe
@@ -55,10 +58,339 @@
           </div>
         </div>
       </section>
-      <section id="section-about"></section>
-      <section id="solutions"></section>
-      <section id="partnership"></section>
-      <section id="contact"></section>
+      <hr />
+      <section id="section-about">
+        <div class="subpage-icon"></div>
+        <div class="container">
+          <h2>About us</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+            consequatur dolor illum!
+          </p>
+          <h3>Dolor sit amet consectetur elit dignissimos</h3>
+          <p>
+            <b>Ipsum dolor</b> sit, amet consectetur adipisicing elit.
+            Asperiores, eius? Tempora nesciunt nam numquam maxime vitae tempore,
+            quasi, blanditiis minus quas enim sit voluptas aspernatur qui ipsa
+            possimus, at eaque. Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Eaque, debitis?
+          </p>
+          <h3>Molestiae voluptate</h3>
+          <p>
+            Dolor sit amet consectetur adipisicing elit. Adipisci quos laborum
+            dolorum aliquid vel illo dignissimos non dolore, commodi saepe
+            praesentium <u>doloremque provident</u>, earum amet!
+            <b>Lorem ipsum</b>, dolor sit amet consectetur adipisicing elit.
+            Quia necessitatibus excepturi ipsam voluptas similique dolorem
+            quidem quibusdam saepe dolore architecto!
+          </p>
+          <h3>Unde molestias atque sequi!</h3>
+          <div class="award-info">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eum
+              consectetur corporis rem sunt odit nulla vero tenetur molestias
+              amet.
+            </p>
+            <div class="columns">
+              <div class="column-1-3">
+                <img
+                  class="img"
+                  src="assets/images/award.svg"
+                  alt="Logistic award"
+                />
+              </div>
+              <div class="column-2-3">
+                <h4>Harum blanditiis</h4>
+                <p>
+                  Ipsa dignissimos sequi ipsam recusandae officiis natus quod
+                  quidem debitis pariatur, porro molestiae asperiores dicta quia
+                  id.
+                </p>
+                <h4>Consectetur adipisicing elit</h4>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione tenetur aperiam sapiente, harum blanditiis ullam
+                  placeat voluptatum nam explicabo quidem quod soluta odio rerum
+                  aliquid nesciunt dolorem, earum dolorum aspernatur.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr />
+      <section id="section-solutions">
+        <div class="subpage-icon"></div>
+        <div class="container">
+          <h2>Solutions</h2>
+          <div class="columns">
+            <div class="column-50">
+              <img
+                class="img img-solutions"
+                src="assets/images/solutions-image.svg"
+                alt="Solutions image"
+              />
+            </div>
+            <div class="column-50">
+              <h4>Debitis quo aperiam quidem</h4>
+              <p>
+                Dolore facilis ducimus nemo placeat iure non nobis eum, illum.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Repudiandae odit non pariatur a reiciendis quasi deleniti
+                provident beatae commodi id?
+              </p>
+              <ul>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Assumenda veniam blanditiis itaque.</li>
+                <li>
+                  Debitis repudiandae sequi eius. Lorem ipsum dolor sit amet.
+                </li>
+                <li>Illum ad dolor beatae.</li>
+                <li>Nemo nobis laboriosam autem!</li>
+              </ul>
+              <p>
+                <u
+                  >blanditiis saepe odio laudantium! Quia molestias sequi fuga
+                  ipsum obcaecati</u
+                >
+              </p>
+              <p>
+                <button class="button">Lorem</button
+                ><button class="button">Ipsum</button>
+              </p>
+            </div>
+          </div>
+          <h3>
+            Adipisicing elit. Exercitationem suscipit
+          </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            impedit fugiat! Blanditiis laborum est animi veniam et porro numquam
+            iusto?
+          </p>
+          <div class="solutions">
+            <div class="solution">
+              <img
+                class="img"
+                src="assets/images/solution-1.svg"
+                alt="Logistic solution - Veritatis"
+              />
+              <h3>Veritatis</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Laudantium assumenda totam, quam similique omnis corporis atque
+              </p>
+            </div>
+            <div class="solution">
+              <img
+                class="img"
+                src="assets/images/solution-2.svg"
+                alt="Logistic solution - Repudiandae odit"
+              />
+              <h3>Repudiandae odit</h3>
+              <p>
+                Nobis necessitatibus aperiam accusantium illo aliquam quasi
+                provident nemo ab, obcaecati labore.
+              </p>
+            </div>
+            <div class="solution">
+              <img
+                class="img"
+                src="assets/images/solution-3.svg"
+                alt="Logistic solution - Numquam iusto"
+              />
+              <h3>Numquam iusto</h3>
+              <p>
+                Voluptatem? Quas perspiciatis ea est, quod labore a dolores
+                alias. Ad, corporis necessitatibus optio quaerat molestiae aut
+                dolores. Ullam cupiditate
+              </p>
+            </div>
+            <div class="solution">
+              <img
+                class="img"
+                src="assets/images/solution-4.svg"
+                alt="Logistic solution - Blanditiis"
+              />
+              <h3>Blanditiis</h3>
+              <p>
+                Suscipit a veritatis voluptate eius provident ipsa possimus
+                pariatur sit quod sunt id
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr />
+      <section id="section-partnership">
+        <div class="subpage-icon"></div>
+        <div class="container">
+          <h2>Partnership</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            soluta consectetur at iure eius perspiciatis in quaerat tempore ut
+            culpa.
+          </p>
+          <ol>
+            <li>Ducimus soluta consectetur</li>
+            <li>Quas perspiciatis ea est</li>
+            <li>Provident beatae commodi id!</li>
+          </ol>
+
+          <p class="special-text">
+            Labore tempora quo consectetur, aspernatur similique sed sunt
+            blanditiis aperiam repudiandae repellendus sint odit explicabo
+            corporis porro?
+            <button class="big-button">Work with us!</button>
+          </p>
+          <h3>Quam similique omnis corporis</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+            aliquid amet veritatis odio?
+          </p>
+          <img
+            class="img"
+            src="assets/images/forklifts-image.svg"
+            alt="Forklifts"
+          />
+          <p>
+            Nemo possimus delectus placeat optio, unde doloremque dicta maxime,
+            non sed quo ipsum dignissimos <b>adipisci</b> accusamus voluptatem
+            itaque suscipit facilis. Sit quos natus sed!
+            <u>Tempore dolores quae at</u> .
+          </p>
+          <h3>Sit quos natus sed!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam...
+          </p>
+          <button class="button">Contact us</button>
+          <p>
+            Explicabo quidem est vel omnis tempora. Placeat at itaque quidem
+            quisquam. Dolorem, doloribus?
+          </p>
+        </div>
+      </section>
+      <hr />
+      <section id="section-contact">
+        <div class="subpage-icon"></div>
+        <div class="container">
+          <h2>Contact us</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nostrum
+            quod ab quasi. Eum quasi numquam inventore eius. Autem laudantium
+            atque enim omnis?
+          </p>
+          <div class="contact-info">
+            <div class="columns">
+              <div class="column-1-3">
+                <h3>Addresses</h3>
+                <p>
+                  Eum quasi numquam inventore eius. Autem laudantium atque enim
+                  omnis:
+                </p>
+                <p>
+                  <b>
+                    Quidemestvel 25a<br />
+                    Ron nostrum 23943 <br />
+                    Nibyland
+                  </b>
+                </p>
+                <p>
+                  Eum quasi numquam inventore eius. Autem laudantium atque enim
+                  omnis:
+                </p>
+                <p>
+                  <b>
+                    Consectetur adipis 15b<br />
+                    Numquam 23943 <br />
+                    Nibyland
+                  </b>
+                </p>
+              </div>
+              <div class="column-1-3">
+                <h3>Phone numbers</h3>
+                <p>
+                  <b>Illum rem doloribus consectetur:</b>
+                  <br />
+                  +(66) 0700700700
+                </p>
+                <p>
+                  <b>Necessitatibus omnis dolore:</b>
+                  <br />
+                  +(66) 0700700777
+                </p>
+                <p>
+                  <b
+                    >Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Illum rem doloribus consectetur necessitatibus:</b
+                  >
+                  <br />
+                  +(65) 7101777777
+                  <br />
+                  +(65) 7102777777
+                </p>
+              </div>
+              <div class="column-1-3">
+                <h3>Other</h3>
+                <p>Odio officia, incidunt voluptatum voluptates veritatis</p>
+                <p>Corrupti inventore magnam porro sequi repellat:</p>
+                <p>Autem laudantium atque <u>Facebook </u></p>
+                <p>Autem laudantium atque <u>Instagram </u></p>
+                <p>Autem laudantium atque <u>Linkedin </u></p>
+              </div>
+            </div>
+          </div>
+          <h3>Contact us with contact form:</h3>
+          <div class="contact-form">
+            <div class="columns">
+              <div class="column-1-3">
+                <label for="name-input"
+                  >First and last name
+                  <input id="name-input" type="text" />
+                </label>
+                <label for="company-input"
+                  >*Company name
+                  <input id="company-input" type="text" />
+                </label>
+                <label for="phone-input"
+                  >Phone number
+                  <input id="phone-input" type="text" />
+                </label>
+                <label for="email-input"
+                  >E-mail address
+                  <input id="email-input" type="text" />
+                </label>
+              </div>
+              <div class="column-2-3">
+                <label for="message-textarea">Your message</label>
+                <textarea
+                  name="message-textarea"
+                  id="message-textarea"
+                  rows="10"
+                ></textarea>
+                <label for="fileupload-input"
+                  >Send a file<input id="fileupload-input" type="file"
+                /></label>
+              </div>
+            </div>
+            <p>* - optional fields</p>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+            asperiores, omnis rem ex officia iure!
+          </p>
+        </div>
+      </section>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <p>LC Solutions 2020 &copy; all rights reserved</p>
+
+        <div class="partners">
+          <a href="/">Partner ABC</a>
+          <a href="/">Partner XYZ</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
