--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,14 @@
           <nav class="nav">
             <ul class="nav-item-list">
               <li class="nav-item"><a href="/">Home</a></li>
-              <li class="nav-item"><a href="#about">About</a></li>
-              <li class="nav-item"><a href="#solutions">Solutions</a></li>
-              <li class="nav-item"><a href="#partnership">Partnership</a></li>
-              <li class="nav-item"><a href="#contact">Contact</a></li>
+              <li class="nav-item"><a href="#section-about">About</a></li>
+              <li class="nav-item">
+                <a href="#section-solutions">Solutions</a>
+              </li>
+              <li class="nav-item">
+                <a href="#section-partnership">Partnership</a>
+              </li>
+              <li class="nav-item"><a href="#section-contact">Contact</a></li>
             </ul>
           </nav>
           <button class="navicon"></button>
@@ -342,37 +346,48 @@
           </div>
           <h3>Contact us with contact form:</h3>
           <div class="contact-form">
-            <div class="columns">
-              <div class="column-1-3">
-                <label for="name-input"
-                  >First and last name
-                  <input id="name-input" type="text" />
-                </label>
-                <label for="company-input"
-                  >*Company name
-                  <input id="company-input" type="text" />
-                </label>
-                <label for="phone-input"
-                  >Phone number
-                  <input id="phone-input" type="text" />
-                </label>
-                <label for="email-input"
-                  >E-mail address
-                  <input id="email-input" type="text" />
-                </label>
+            <form class="the-form" action="/">
+              <div class="columns">
+                <div class="column-1-3">
+                  <label for="name-input"
+                    >First and last name
+                    <input id="name-input" type="text" />
+                  </label>
+                  <label for="company-input"
+                    >*Company name
+                    <input id="company-input" type="text" />
+                  </label>
+                  <label for="phone-input"
+                    >Phone number
+                    <input id="phone-input" type="text" />
+                  </label>
+                  <label for="email-input"
+                    >E-mail address
+                    <input id="email-input" type="text" />
+                  </label>
+                </div>
+                <div class="column-2-3">
+                  <label for="message-textarea"
+                    >Your message
+                    <textarea
+                      name="message-textarea"
+                      id="message-textarea"
+                      rows="10"
+                    ></textarea>
+                  </label>
+                  <label for="fileupload-input"
+                    >Send a file <input id="fileupload-input" type="file"
+                  /></label>
+                  <label for="submit-input"
+                    ><input
+                      id="submit-input"
+                      type="submit"
+                      value="Send the message"
+                  /></label>
+                  <div class="submit-message"></div>
+                </div>
               </div>
-              <div class="column-2-3">
-                <label for="message-textarea">Your message</label>
-                <textarea
-                  name="message-textarea"
-                  id="message-textarea"
-                  rows="10"
-                ></textarea>
-                <label for="fileupload-input"
-                  >Send a file<input id="fileupload-input" type="file"
-                /></label>
-              </div>
-            </div>
+            </form>
             <p>* - optional fields</p>
           </div>
           <p>
@@ -385,7 +400,6 @@
     <div class="footer">
       <div class="container">
         <p>LC Solutions 2020 &copy; all rights reserved</p>
-
         <div class="partners">
           <a href="/">Partner ABC</a>
           <a href="/">Partner XYZ</a>
